--- a/quality/3rdparty/checkstyle-5.3/site/css/maven-theme.css
+++ b/quality/3rdparty/checkstyle-5.3/site/css/maven-theme.css
@@ -1,5 +1,5 @@
 body {
-  padding: 0px 0px 10px 0px;
+  padding: 0 0 10px 0;
 }
 body, td, select, input, li{
   font-family: Verdana, Helvetica, Arial, sans-serif;
